k8s/database/network-policy.yaml
# Protege o PostgreSQL, aceitando conexões apenas da aplicação Java.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-security-policy
  namespace: tech-challenge
spec:
  podSelector:
    matchLabels:
      app: postgres_db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: spring-app
      ports:
        - protocol: TCP
          port: 5432
